# txsoundgen

./: .gitignore  Dockerfile  LICENSE.md  README.md  pyproject.toml  tasks.py
.github/workflows/: docs.yml
docs/: index.html  search.js
docs/txsoundgen/: audio.html  client.html  providers.html  utils.html  voicepacks.html
packs/: en.yaml  en_GB.yaml
tests/: __init__.py  test_audio.py  test_models.py  test_pack.py  test_packs.py  test_providers.py  test_sound.py  test_utils.py
tests/providers/: test_piper.py  test_polly.py
txsoundgen/: __init__.py  __main__.py  audio.py  client.py  model.py  pack.py  providers.py  utils.py  voicepacks.py  worker.py
