[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "txsoundgen"
version = "0.1.0"
description = "Sound pack generator for EdgeTX/OpenTX radios"
authors = ["Ben Fairless <ben.fairless@gmail.com>"]
readme = "README.md"
repository = "https://github.com/benfairless/txsoundgen"
license = "MIT"
# include = []
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Ham Radio",
    "Topic :: Multimedia :: Sound/Audio :: Speech"
]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.24.40"
peewee = "^3.15.1"
coloredlogs = "^15.0.1"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pdoc = "^12.0.2"
pylint = "^2.14.5"
pytest-cov = "^3.0.0"
pytest-spec = "^3.2.0"
python-magic = "^0.4.27"
black = "^22.6.0"
invoke = "^1.7.1"

[tool.pytest.ini_options]
spec_header_format = "[{module_path}] {test_case}:"
spec_test_format = "{result} {name} : {docstring_summary}"
addopts = "--spec"

[tool.pylint.format]
# max-line-length = 88

[tool.pylint.typecheck]
ignored-classes = ["Wave_read"]
