[project]
name = "txsoundgen"
version = "0.1.0"
description = "Sound pack generator for EdgeTX/OpenTX radios"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Ben Fairless", email = "ben.fairless@gmail.com" }
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Ham Radio",
    "Topic :: Multimedia :: Sound/Audio :: Speech"
]
requires-python = ">=3.13"
dependencies = [
    "boto3 (>=1.40.41,<2.0.0)",
    "coloredlogs (>=15.0.1,<16.0.0)",
    "piper-tts (>=1.3.0,<2.0.0)"
]

[dependency-groups]
dev = [
    "pdoc (>=15.0.4,<16.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-spec (>=5.1.0,<6.0.0)",
    "pytest-xdist (>=3.8.0,<4.0.0)",
    "python-magic (>=0.4.27,<0.5.0)",
    "invoke (>=2.2.0,<3.0.0)",
    "ruff (>=0.13.2,<0.14.0)"

]
experimental = [
    "pydub (>=0.25.1,<0.26.0)",
    "audioop-lts (>=0.2.2,<0.3.0)",
]
data = [
    "pyyaml (>=6.0.3,<7.0.0)",
    "peewee (>=3.18.2,<4.0.0)"
]

[project.urls]
source = "https://github.com/benfairless/txsoundgen"
issues = "https://github.com/benfairless/txsoundgen/issues"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
default-groups = ["dev"]

[tool.coverage.run]
branch = true

[tool.coverage.html]
directory = "htmlcov"

[tool.pytest.ini_options]
testpaths = ["tests"]
spec_header_format = "[{module_path}]"
spec_test_format = "{result} {name} : {docstring_summary}"
addopts = "--spec -n auto --cov"
markers = ["slow: Marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.ruff]
line-length = 88
indent-width = 4
exclude = ["legacy/"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812","D203", "D213", "S310", "D415", "EM101", "ANN001", "TRY003", "F403","D400","ANN204", "FBT002"]
# ignore = ["COM812","D203", "D213", "S310"]
unfixable = []
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101", "S106"]
"tasks.py" = ["A002", "ANN201", "PT028"]
